--- a/amplify.yml
+++ b/amplify.yml
@@ -15,4 +15,27 @@ applications:
       cache:
         paths:
           - node_modules/**/*
+      customHeaders:
+        - pattern: '**/*'
+          headers:
+            - key: 'Access-Control-Allow-Origin'
+              value: '*'
+            - key: 'Access-Control-Allow-Methods'
+              value: 'GET, POST, PUT, DELETE, OPTIONS'
+            - key: 'Access-Control-Allow-Headers'
+              value: 'Content-Type, Authorization'
+            - key: 'Cache-Control'
+              value: 'public, max-age=31536000, immutable'
+        - pattern: '*.html'
+          headers:
+            - key: 'Cache-Control'
+              value: 'no-cache, no-store, must-revalidate'
+        - pattern: '*.js'
+          headers:
+            - key: 'Content-Type'
+              value: 'application/javascript; charset=utf-8'
+        - pattern: '*.css'
+          headers:
+            - key: 'Content-Type'
+              value: 'text/css; charset=utf-8'
     appRoot: frontend
