fix: Resolve 401 error and integrate viewer navigation
Backend:
- Fix API Gateway Authorizer to use correct User Pool
- Change from hardcoded User Pool ID to CloudFormation reference
- Now using: us-east-1_y4nhjUKxN (matches frontend)

Frontend:
- Integrate viewer with Dashboard navigation
- Add Back to Dashboard button in viewer header
- Remove Login button when authenticated
- Black theme throughout viewer
- Seamless navigation without page reloads

This fixes:
- 401 Unauthorized error on /my-images endpoint
- CORS issues with authorization
- Viewer opening in separate window
- No back button to Dashboard

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -21,7 +21,7 @@ Globals:
     Auth:
       Authorizers:
         CognitoAuthorizer:
-          UserPoolArn: !Sub 'arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/us-east-1_uXa0bwQNp'
+          UserPoolArn: !GetAtt CognitoUserPool.Arn
           Identity:
             Header: Authorization
 
