fix: Add authentication to upload/process endpoints
Backend:
- Add Cognito Authorizer to /upload endpoint
- Add Cognito Authorizer to /process/totalseg endpoint
- Now all protected endpoints require valid JWT token

Frontend:
- Add authentication token to upload request
- Add authentication token to process request
- Import fetchAuthSession from aws-amplify/auth
- Check for valid token before making requests
- Throw error if user not authenticated

This fixes:
- Upload not working (missing userId from token)
- Files not being saved to S3
- DynamoDB records not being created
- Processing not starting

All API calls now include:
Authorization: Bearer <token>

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -168,6 +168,8 @@ Resources:
           Properties:
             Path: /upload
             Method: POST
+            Auth:
+              Authorizer: CognitoAuthorizer
 
   # Lambda Function for processing orchestration
   ProcessFunction:
@@ -203,6 +205,8 @@ Resources:
           Properties:
             Path: /process/totalseg
             Method: POST
+            Auth:
+              Authorizer: CognitoAuthorizer
 
   # Lambda Function for file download
   DownloadFunction:
