feat: Complete soft delete implementation with CORS fix
Backend:
- DeleteStudyFunction with soft delete (deleted=true flag)
- Add CORS preflight (OPTIONS) handling
- Filter deleted studies from /my-images
- User ownership verification
- deletedAt timestamp

Frontend:
- Delete button on study cards
- Confirmation modal with warning
- Cancel/Delete actions
- Loading states
- Fix React hooks violation in UploadDropzone
- Auto-upload on Process with AI
- Hide UI during operations

CORS Fix:
- Add OPTIONS method for /studies/{jobId}
- Handle preflight requests in Lambda
- Return proper CORS headers

User can now:
✅ Delete studies from Dashboard
✅ Confirm deletion with modal
✅ Studies soft-deleted (archived)
✅ Data preserved in S3/DynamoDB

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -252,6 +252,32 @@ Resources:
             Auth:
               Authorizer: CognitoAuthorizer
 
+  # Lambda Function to soft delete a study (protected with Cognito)
+  DeleteStudyFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: iris-delete-study
+      CodeUri: lambdas/delete-study/
+      Handler: handler.lambda_handler
+      Layers:
+        - !Ref DependenciesLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MetadataTable
+      Events:
+        DeleteStudy:
+          Type: Api
+          Properties:
+            Path: /studies/{jobId}
+            Method: DELETE
+            Auth:
+              Authorizer: CognitoAuthorizer
+        DeleteStudyOptions:
+          Type: Api
+          Properties:
+            Path: /studies/{jobId}
+            Method: OPTIONS
+
   # Lambda Function for health check
   HealthFunction:
     Type: AWS::Serverless::Function
