--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
+    "build:check": "tsc -b && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "lint": "echo 'add eslint later'",
