feat: Update study status to 'uploaded' after successful S3 upload
Backend:
- New Lambda: UpdateStatusFunction
- Endpoint: PATCH /studies/{jobId}/status
- Updates DynamoDB status after upload
- Protected with Cognito authorizer
- Verifies user ownership
- CORS support with OPTIONS method

Frontend:
- Call update-status endpoint after S3 upload succeeds
- Works in both startUploads and startProcessing
- Status changes from 'pending' → 'uploaded'
- Graceful error handling (continues if status update fails)

This fixes:
✅ Studies no longer stuck in 'pending' status
✅ Dashboard shows correct 'uploaded' status
✅ Users can see which studies are ready to view
✅ downloadUrl already works from /my-images

User flow now:
1. Upload file → status: 'pending' (creating record)
2. S3 upload succeeds → status: 'uploaded' (ready to view)
3. Process with AI → status: 'processing'
4. Complete → status: 'completed'

The 'View Study' button should now work because:
- Status is 'uploaded' (not stuck on 'pending')
- downloadUrl is generated by /my-images
- Frontend can load the file from S3

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -278,6 +278,32 @@ Resources:
             Path: /studies/{jobId}
             Method: OPTIONS
 
+  # Lambda Function to update study status after upload
+  UpdateStatusFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: iris-update-status
+      CodeUri: lambdas/update-status/
+      Handler: handler.lambda_handler
+      Layers:
+        - !Ref DependenciesLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MetadataTable
+      Events:
+        UpdateStatus:
+          Type: Api
+          Properties:
+            Path: /studies/{jobId}/status
+            Method: PATCH
+            Auth:
+              Authorizer: CognitoAuthorizer
+        UpdateStatusOptions:
+          Type: Api
+          Properties:
+            Path: /studies/{jobId}/status
+            Method: OPTIONS
+
   # Lambda Function for health check
   HealthFunction:
     Type: AWS::Serverless::Function
