feat: Save 3D model paths in DynamoDB for frontend access
Problem:
- AI generates 3D models and uploads to S3
- But DynamoDB had no record of where files are
- Frontend couldn't find/download processed models

Solution implements full artifact tracking:

1. Process Lambda (when job starts):
   - Saves expectedArtifacts with S3 paths
   - Paths: Result.obj, materials.mtl, Result.json, result.zip
   - Format: s3://bucket/results/{jobId}/filename

2. SageMaker inference (when processing completes):
   - Uploads files to S3
   - Updates DynamoDB with 'completed' status
   - Writes actual artifact paths to 'artifacts' field
   - Sets completedAt timestamp

3. My-Images Lambda (when frontend fetches):
   - Reads expectedArtifacts or artifacts from DynamoDB
   - Generates presigned URLs for each file
   - Returns artifactUrls to frontend
   - URLs valid for 1 hour

4. New UpdateJobStatus Lambda:
   - Endpoint: POST /jobs/{jobId}/status
   - Updates status and artifacts
   - Can be called by polling or webhooks
   - Backup mechanism if SageMaker update fails

Flow:
User → Process with AI
    ↓
Lambda → Save expected paths in DynamoDB
    ↓
SageMaker → Process + Upload to S3
    ↓
SageMaker → Update DynamoDB (status: completed, artifacts: paths)
    ↓
Frontend → Call /my-images
    ↓
Lambda → Generate presigned URLs from DynamoDB paths
    ↓
Frontend → Download OBJ/MTL/JSON from S3
    ↓
3D Viewer → Render smooth models ✅

Benefits:
✅ Frontend knows where to find processed files
✅ Presigned URLs generated on-demand (secure)
✅ Works even if user refreshes page
✅ Persistent artifact references
✅ No manual polling needed
✅ Automatic status updates from SageMaker

DynamoDB fields added:
- expectedArtifacts: Set when job queues
- artifacts: Set when job completes
- completedAt: Timestamp of completion
- artifactUrls: Generated by my-images (presigned URLs)

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -304,6 +304,32 @@ Resources:
             Path: /studies/{jobId}/status
             Method: OPTIONS
 
+  # Lambda Function to update job status and artifacts after SageMaker processing
+  UpdateJobStatusFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: iris-update-job-status
+      CodeUri: lambdas/update-job-status/
+      Handler: handler.lambda_handler
+      Layers:
+        - !Ref DependenciesLayer
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MetadataTable
+      Events:
+        UpdateJobStatus:
+          Type: Api
+          Properties:
+            Path: /jobs/{jobId}/status
+            Method: POST
+            Auth:
+              Authorizer: NONE  # Will be called by SageMaker or internal polling
+        UpdateJobStatusOptions:
+          Type: Api
+          Properties:
+            Path: /jobs/{jobId}/status
+            Method: OPTIONS
+
   # Lambda Function for health check
   HealthFunction:
     Type: AWS::Serverless::Function
